aplicacao agente sequencial

--- a/Brython/index.html
+++ b/Brython/index.html
@@ -18,10 +18,11 @@
 
 <body onload="brython()">
 
-    <div id="tabelajogo"></div>
+    <div id="tabelajogo" b-on="change:isFim"></div>
 
     <script type="text/python" src="/component.py"></script>
-
+    
+    <button id=btn-animate >click</button>
 </body>
 
 </html>
